# tgc-owl

./: .gitignore  DEVELOPMENT_PLAN.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly.yml  pr-validation.yml
telegram-analytics/: .env.example  Makefile  README.md  README_SETUP.md  TESTING_GUIDE.md  example_channel_manager.py  mypy.ini  pyproject.toml  run_tests.py  test_channel_prod.py  test_connectivity.py  test_login.py  validate_setup.py
telegram-analytics/src/telegram_analytics/: __init__.py
telegram-analytics/src/telegram_analytics/core/: __init__.py  channel_manager.py  client.py  config.py
telegram-analytics/tests/: __init__.py  test_channel_manager.py  test_client.py
