[project]
name = "telegram-analytics"
version = "0.1.0"
description = "Telegram Channel Analytics Bot - Comprehensive analytics for Telegram channels using Telethon userbot approach. Track subscriber events, post performance, and get actionable insights with real-time dashboards and reporting."

authors = [
    { name = "TurboKach", email = "incognito@turbokach.me" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "telethon>=1.40.0",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
    "types-requests>=2.32.4.20250611",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
